<resources>
    <string name="app_name">ObrasArteApp</string>
    <string name="imagen_de_obra">Imagen de la obra</string>
    <string name="label_autor">Autor: %s</string>
    <string name="label_anio">Año: %d</string>
    <string name="label_estilo">Estilo: %s</string>
    <string name="label_ubicacion">Ubicación: %s</string>
    <string name="error_carga_obras">Error al cargar obras</string>
    <string name="title_artworks">Obras de Arte</string>
    <string name="image_art">Imagen de la obra</string>
    <string name="workart_name">Nombre de la Obra</string>
    <string name="Author">Autor:</string>
    <string name="year">Año:</string>
    <string name="name_style">Estilo:</string>
    <string name="location">Ubicación:</string>
    <string name="workartname">Nombre de la obra</string>
    <string name="autor">Autor</string>
    <string name="a_o">Año</string>
    <string name="error_al_cargar_el_video">Error al cargar el video</string>
    <string name="url_de_video_inv_lida">URL de video inválida</string>
    <string name="obra_no_encontrada">Obra no encontrada</string>
    <string name="latitud">latitud</string>
    <string name="longitud">longitud</string>
    <string name="ubicacion">ubicacion</string>
    <string name="error_al_cargar_la_obra">Error al cargar la obra</string>
    <string name="error_obras">ERROR_OBRAS</string>
    <string name="error_al_obtener_obras">Error al obtener obras</string>
    <string name="test_coords">TEST_COORDS</string>
    <string name="test_video">TEST_VIDEO</string>
    <string name="test_videos">TEST_VIDEO</string>
    <string name="la_lista_de_obras_est_vac_a">La lista de obras está vacía</string>
    <string name="completa_todos_los_campos">Completa todos los campos</string>
    <string name="correo_de_recuperaci_n_enviado">Correo de recuperación enviado</string>
    <string name="por_favor_ingresa_tu_correo_electr_nico">Por favor ingresa tu correo electrónico</string>
    <string name="error">Error: %1$s</string>
    <string name="latitudM">latitud</string>
    <string name="longitudM">longitud</string>
    <string name="nombrelugarM">nombreLugar</string>
    <string name="ubicacion_de_la_obraM">Ubicación de la Obra</string>
    <string name="cuenta_creada_con_xito">Cuenta creada con éxito</string>
    <string name="errorC">Error: %1$s</string>
    <string name="completa_campos">Completa todos los campos</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="logintxt">Iniciar Sesión</string>
    <string name="Register">Registrarse</string>
    <string name="Forgotpwd">¿Olvidaste tu contraseña?</string>
    <string name="LocationWorkArt">Ubicación de la Obra</string>
    <string name="emailreg">Correo electrónico</string>
    <string name="passwordreg">Contraseña</string>
    <string name="Registro">Registrarse</string>
    <string name="BackToLogin">Volver al Login</string>
    <string name="outsession">Cerrar sesión</string>
    <string name="lista_de_obras">Lista de Obras</string>
    <string name="detalle_de_obra">Detalle de Obra</string>

</resources>