<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/ivObra"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/workartname"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingStart="8dp"
        app:layout_constraintStart_toEndOf="@id/ivObra"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvAutor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/autor"
        android:textSize="14sp"
        android:textColor="#777777"
        android:paddingStart="8dp"
        app:layout_constraintStart_toEndOf="@id/ivObra"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvAnio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/a_o"
        android:textSize="14sp"
        android:textColor="#999999"
        android:paddingStart="8dp"
        app:layout_constraintStart_toEndOf="@id/ivObra"
        app:layout_constraintTop_toBottomOf="@id/tvAutor"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>